[package]
name = "webutil"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "EventTarget",
    "Event",
    "MessageEvent",
    "FocusEvent",
    "CloseEvent",
    "PageTransitionEvent",
    "PopStateEvent",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "ClipboardEvent",
    "UiEvent",
    "DragEvent",
    "HashChangeEvent",
    "InputEvent",
    "StorageEvent",
    "ProgressEvent",
    "Window",
    "console",
    "Worker",
    "DedicatedWorkerGlobalScope",
    "AddEventListenerOptions"
]
